# qcheck

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  SECURITY.md  action.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: autofix-generated.yml  automerge.yml  build.yml  pages.yml  release.yml  test.yml
docs/: AGENTS.md  CONTRACTS.md  FALSE_POSITIVE_HARDENING.md  RELEASING.md
examples/: bell.qasm  bell_qiskit.py  broken_qiskit_execute.py  consume_json.py  consume_rules_json.py  github-action.yml  unsafe_python.py
fixtures/: invalid_bad_measurement.qasm  invalid_missing_register.qasm  malicious.py  qiskit_invalid_api.py  qiskit_missing_import.py  valid_bell_qiskit.py
leaderboard/: PLAN.md  README.md  evaluate.py  methodology.md
leaderboard/results/: sample_results.json
leaderboard/scripts/: build_leaderboard.py  evaluate_submission.py
leaderboard/site/: brand.css  index.html  leaderboard.md
leaderboard/submissions/sample/demo_model/: metadata.json  openqasm_bell_state.qasm  openqasm_measurement_registers.qasm  qiskit_bell_state.py  qiskit_ghz_state.py  qiskit_grover_toy.py  qiskit_teleportation_basic.py
leaderboard/tasks/: task_001_bell_state.json
leaderboard/tasks/openqasm/: bell_state_qasm.json  measurement_registers.json
leaderboard/tasks/qiskit/: bell_state.json  ghz_state.json  grover_toy.json  teleportation_basic.json
qcheck/: __init__.py  checks_cirq.py  checks_pennylane.py  checks_qasm.py  checks_qiskit.py  cli.py  detect.py  report.py  rules.py  safety.py  sarif.py  suppress.py
tests/: conftest.py  test_cirq_rules.py  test_cli.py  test_contracts.py  test_corpus_smoke.py  test_coverage_hardening.py  test_examples.py  test_false_positive_guards.py  test_fp_hardening.py  test_leaderboard_build.py  test_leaderboard_evaluate.py  test_pennylane_rules.py  test_qasm.py  test_qiskit.py  test_rule_expansion.py  test_rule_expansion_2.py  test_rule_expansion_3.py  test_rule_expansion_4.py  test_rules.py  test_safety.py  test_sarif.py  test_snippet_suite.py  test_suppression.py
tools/: corpus_smoke.py
