[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
# Distribution name: 'qcheck' is already taken on PyPI (an unrelated data-
# validation library), so we publish as 'qcheck-quantum' (verified available
# 2026-06-28). The CLI command and import package remain 'qcheck'.
# See docs/plan/SESSION_01_HANDOFF.md for the open naming decisions.
name = "qcheck-quantum"
version = "0.1.0"
description = "Verify LLM-generated quantum code (Qiskit / OpenQASM) statically and safely."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "qcheck contributors" }]
keywords = ["quantum", "qiskit", "openqasm", "llm", "linter", "verification", "static-analysis", "mcp"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Physics",
]
# v0 intentionally has ZERO runtime dependencies (stdlib only: argparse, ast).
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]

[project.urls]
Homepage = "https://github.com/JCQuankey/qcheck"
Repository = "https://github.com/JCQuankey/qcheck"
Issues = "https://github.com/JCQuankey/qcheck/issues"

[project.scripts]
qcheck = "qcheck.cli:main"

[tool.setuptools]
packages = ["qcheck"]
