[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
# Distribution name: 'qcheck' is already taken on PyPI (an unrelated data-
# validation library), so we publish as 'qcheck-quantum'. The CLI command and
# import package both remain 'qcheck'.
name = "qcheck-quantum"
version = "0.8.0"
description = "Verify LLM-generated quantum code (Qiskit / OpenQASM) statically and safely."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "Apache-2.0" }
authors = [{ name = "qcheck contributors" }]
maintainers = [{ name = "JCQuankey", email = "dev@quankey.xyz" }]
keywords = ["quantum", "qiskit", "openqasm", "llm", "linter", "code-review", "static-analysis", "sarif"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Scientific/Engineering :: Physics",
]
# v0 intentionally has ZERO runtime dependencies (stdlib only: argparse, ast).
dependencies = []

[project.optional-dependencies]
dev = ["pytest>=7"]
# Maintainer tooling for building/checking distributions (not needed at runtime).
release = ["build>=1", "twine>=5"]

[project.urls]
Homepage = "https://github.com/JCQuankey/qcheck"
Repository = "https://github.com/JCQuankey/qcheck"
Issues = "https://github.com/JCQuankey/qcheck/issues"

[project.scripts]
qcheck = "qcheck.cli:main"

[tool.setuptools]
packages = ["qcheck"]

[tool.pytest.ini_options]
# Don't collect tests out of local build/dist copies (avoids duplicate-module
# import errors after `python -m build`).
norecursedirs = ["build", "dist", ".venv", "*.egg-info"]
